[package]
name = "skale"
version = "0.1.0"
edition = "2021"
authors = ["Rowan Lee"]
rust-version = "1.64.0"
homepage = "https://rowan-lee.github.io/skale/main/index.html"
license = "Apache-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
